@@ -3,6 +3,7 @@
 - Server roles
 - Clear database
 - Property to change font globally
+- Config version
 
 0.8.1 / February 20, 2016
 [Alexandr Topilski]
