@@ -4,6 +4,7 @@
 - Server roles
 - Clear database
 - Property to change font globally
+- Config version
 
 0.5.8 / Fabruary 20, 2016
 [Alexandr Topilski]
